# psut-community-service-notifier

./: .dockerignore  .gitignore  Dockerfile  error_notifier.py  google_sheets.py  helpers.py  logger_setup.py  main.py  notes.txt  pyproject.toml  recipients.txt  requirements.txt  send_emails.py
.github/workflows/: deploy.yml
